# Deflect

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  ACKNOWLEDGEMENTS.txt  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  Deflect.cmake  FindPackages.cmake  FindRequired.cmake
apps/: CMakeLists.txt
apps/DesktopStreamer/: AppNapSuspender.h  AppNapSuspender.mm  CMakeLists.txt  DesktopSelectionRectangle.cpp  DesktopSelectionRectangle.h  DesktopSelectionView.cpp  DesktopSelectionView.h  DesktopSelectionWindow.cpp  DesktopSelectionWindow.h  DesktopWindowsModel.h  DesktopWindowsModel.mm  Info.plist  Info.plist.in  MainWindow.cpp  MainWindow.h  MainWindow.ui  Stream.cpp  Stream.h  defaults.cpp  defaults.h  defaults.json.in  desktopstreamer.desktop  main.cpp  nameUtils.cpp  nameUtils.h  nameUtils.mm
apps/DesktopStreamer/src/: AppNapSuspender.h  DesktopSelectionRectangle.cpp  MainWindow.cpp
apps/QmlStreamer/: CMakeLists.txt  gui.qml  main.cpp  resources.qrc
apps/SimpleStreamer/: CMakeLists.txt  main.cpp
deflect/: AbstractCommandHandler.h  AppNapSuspender.h  AppNapSuspender.mm  CMakeLists.txt  Command.cpp  Command.h  CommandHandler.cpp  CommandHandler.h  CommandType.cpp  CommandType.h  Event.cpp  Event.h  EventReceiver.h  Frame.cpp  Frame.h  FrameDispatcher.cpp  FrameDispatcher.h  ImageJpegCompressor.cpp  ImageJpegCompressor.h  ImageJpegDecompressor.cpp  ImageJpegDecompressor.h  ImageSegmenter.cpp  ImageSegmenter.h  ImageWrapper.cpp  ImageWrapper.h  MTQueue.h  MessageHeader.cpp  MessageHeader.h  MetaTypeRegistration.cpp  NetworkListener.cpp  NetworkListener.h  NetworkListenerWorker.cpp  NetworkListenerWorker.h  NetworkProtocol.h  Observer.cpp  Observer.h  PixelStreamBuffer.cpp  PixelStreamBuffer.h  PixelStreamDispatcher.cpp  PixelStreamDispatcher.h  (+34 more)
deflect/moodycamel/: blockingconcurrentqueue.h  concurrentqueue.h
deflect/qt/: CMakeLists.txt  EventReceiver.cpp  EventReceiver.h  OffscreenQuickView.cpp  OffscreenQuickView.h  QmlGestures.h  QmlStreamer.cpp  QmlStreamer.h  QmlStreamerImpl.cpp  QmlStreamerImpl.h  QuickRenderer.cpp  QuickRenderer.h  TouchInjector.cpp  TouchInjector.h  helpers.h  types.h
deflect/server/: CMakeLists.txt  EventReceiver.h  Frame.cpp  Frame.h  FrameDispatcher.cpp  FrameDispatcher.h  ImageJpegDecompressor.cpp  ImageJpegDecompressor.h  ReceiveBuffer.cpp  ReceiveBuffer.h  SegmentDecoder.cpp  SegmentDecoder.h  Server.cpp  Server.h  ServerWorker.cpp  ServerWorker.h  SourceBuffer.cpp  SourceBuffer.h  Tile.h  TileDecoder.cpp  TileDecoder.h  types.h
deflectQml/: CMakeLists.txt  EventReceiver.cpp  EventReceiver.h  QmlStreamer.cpp  QmlStreamer.h  QmlStreamerImpl.cpp  QmlStreamerImpl.h
doc/: CMakeLists.txt  Changelog.md  ChromaSubsampling.md  RelNotes.md  StereoStreaming.md
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  CommandTests.cpp  FrameDispatcherTests.cpp  FrameTests.cpp  ImageSegmenterTests.cpp  ImageWrapperTests.cpp  NetworkSerializationTests.cpp  PixelStreamBufferTests.cpp  PixelStreamSegmentDecoderTests.cpp  PixelStreamSegmentParametersTests.cpp  ReceiveBufferTests.cpp  SegmentDecoderTests.cpp  SegmentParametersTests.cpp  ServerTests.cpp  SocketTests.cpp  StreamTests.cpp  TileDecoderTests.cpp
tests/cpp/perf/: benchmarkStreamer.cpp  streamTests.cpp
tests/mock/: CMakeLists.txt  DeflectServer.cpp  DeflectServer.h  FrameUtils.h  MinimalDeflectServer.cpp  MinimalDeflectServer.h  MinimalGlobalQtApp.h  MockNetworkListener.cpp  MockNetworkListener.h  MockServer.cpp  MockServer.h  Timer.h  boost_test_thread_safe.h
tests/perf/: CMakeLists.txt  benchmarkStreamer.cpp  dcBenchmarkStreamer.cpp  streamTests.cpp
